# my_website

./: .gitignore
backend/: .gitignore  add_sample_data.py  build.sh  pyproject.toml  render.yaml  requirements.txt
backend/app/: auth.py  config.py  database.py  database.py.backup  email_utils.py  main.py  models.py  pyproject.toml  schemas.py
backend/app/routers/: auth.py  blogs.py  contact.py  papers.py  research.py
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Navbar.jsx  SessionTimeout.jsx
frontend/src/pages/: About.jsx  Admin.jsx  AdminDashboard.jsx  AdminLogin.jsx  AdminPapers.jsx  AdminResearch.jsx  Blog.jsx  BlogDetail.jsx  Contact.jsx  Home.jsx  Papers.jsx  Research.jsx  ResearchDetail.jsx
frontend/src/utils/: api.js  security.js
